Created test for PwsConstraint::pre that checks that an expected trace can be followed backwards. Currently fails.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,7 +24,7 @@ pb_container1.cpp pb_container1.h \
 pb_container2.cpp pb_container2.h \
 predicates.tcc predicates.h \
 preprocessor.h preprocessor.cpp \
-pws_constraint.h pws_constraint.cpp \
+pws_constraint.h pws_constraint.cpp pws_constraint.test.cpp \
 reachability.cpp reachability.h \
 sb_constraint.cpp sb_constraint.h \
 sb_container.cpp sb_container.h \
