Generalised SbTsoBwd and implemented PwsPsoBwd ontop.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,6 +26,7 @@ predicates.tcc predicates.h \
 preprocessor.h preprocessor.cpp \
 pws_constraint.h pws_constraint.cpp pws_constraint.test.cpp \
 pws_container.h pws_container.cpp \
+pws_pso_bwd.cpp pws_pso_bwd.h \
 reachability.cpp reachability.h \
 sb_constraint.cpp sb_constraint.h \
 sb_container.cpp sb_container.h \
