Changed README to markdown syntax to look better on github.
Added note about problems if Python 3 is installed. Added -std=c++0x as a
fallback in configure.ac.

--- a/configure.ac
+++ b/configure.ac
@@ -30,7 +30,13 @@ AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <functional>]],
    AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <functional>]],
                                        [[int j = 42; std::function<int(int)> f = [j](int i){ return i+j; }]])],
      [AC_MSG_RESULT([yes])],
-     [AC_MSG_FAILURE([Failed to compile lambda expression. Does your compiler support C++11?])])])
+     [AC_MSG_RESULT([no]) ;
+        AC_MSG_CHECKING([for lambdas with switch -std=c++0x]) ;
+        CXXFLAGS="$OLDCXXFLAGS -std=c++0x" ;
+        AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <functional>]],
+                                           [[int j = 42; std::function<int(int)> f = [j](int i){ return i+j; }]])],
+                          [AC_MSG_RESULT([yes])],
+                          [AC_MSG_FAILURE([Failed to compile lambda expression. Does your compiler support C++11?])])])])
 AC_MSG_CHECKING([for automatic type inference])
 AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <list>]],
                                    [[std::list<int> l; for(auto it = l.begin(); it != l.end(); ++it) ;]])],
