Implemented PWS optimisation last_write_sets.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,6 +27,7 @@ pb_container1.cpp pb_container1.h \
 pb_container2.cpp pb_container2.h \
 predicates.tcc predicates.h \
 preprocessor.h preprocessor.cpp \
+pputils.h \
 pso_fencins.h pso_fencins.cpp \
 pws_constraint.h pws_constraint.cpp pws_constraint.test.cpp \
 pws_container.h pws_container.cpp \
